--- a/popup.html
+++ b/popup.html
@@ -1,25 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>My Extension</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      width: 200px;
-      padding: 10px;
-    }
-    button {
-      width: 100%;
-      padding: 8px;
-      font-size: 14px;
-      cursor: pointer;
-    }
-  </style>
+  <meta charset="utf-8">
+  <title>Custom Deductions</title>
+  <link rel="stylesheet" href="popup.css">
 </head>
 <body>
-  <h4>Hello!</h4>
-  <button id="click-me">Click Me</button>
-
-  <script src="popup.js"></script>
+  <div class="container">
+    <h2>Custom Deductions</h2>
+    <textarea id="deductionInput" placeholder="Enter markdown..."></textarea>
+    <button id="addButton">Add Deduction</button>
+    <div id="deductionList"></div>
+  </div>
+  <script src="popup.js" defer></script>
 </body>
 </html>
