--- a/popup.html
+++ b/popup.html
@@ -7,7 +7,13 @@
 </head>
 <body>
   <div class="container">
-    <h2>Custom Deductions</h2>
+    <h2>Add a Deduction</h2>
+    <div class="import-export">
+      <button id="exportBtn">Export</button>
+      <label for="importInput" class="import-label">Import</label>
+      <input type="file" id="importInput" accept=".json" style="display: none;" />
+    </div>
+    
     <textarea id="deductionInput" placeholder="Enter markdown..."></textarea>
     <button id="addButton">Add Deduction</button>
     <div id="deductionList"></div>
