--- a/popup.html
+++ b/popup.html
@@ -7,12 +7,15 @@
 </head>
 <body>
   <div class="container">
-    <h2>Add a Deduction</h2>
-    <div class="import-export">
-      <button id="exportBtn">Export</button>
-      <label for="importInput" class="import-label">Import</label>
-      <input type="file" id="importInput" accept=".json" style="display: none;" />
+    <div class="header-bar">
+      <h2>Add a Deduction</h2>
+      <div class="button-group">
+        <button id="exportBtn">Export</button>
+        <label for="importInput" class="import-label">Import</label>
+        <input type="file" id="importInput" style="display:none" />
+      </div>
     </div>
+    
     
     <textarea id="deductionInput" placeholder="Enter markdown..."></textarea>
     <button id="addButton">Add Deduction</button>
