--- a/popup.html
+++ b/popup.html
@@ -7,6 +7,7 @@
 </head>
 <body>
   <div class="container">
+    <span>Email tleo@cs for feedback and suggestions 🙂</span>
     <div class="header-bar">
       <h2>Add a Deduction</h2>
       <div class="button-group">
