Restructured app to /src convention

--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -22,6 +22,6 @@
     <button id="addButton">Add Deduction</button>
     <div id="deductionList"></div>
   </div>
-  <script src="popup.js" defer></script>
+  <script src="./popup.js" defer></script>
 </body>
 </html>
